updated name in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ highlighter: pygments
 title : B&T Garage
 tagline: The Foxy Molly Build Site
 author :
-  name : Brian Swain
+  name : B&T Garage
   email : brianandtrent@gmail.com
   github : btgarage
   twitter : btgarage
